packages/isar_db/test/errors/class/private.dart
// must be public

import 'package:isar_db/isar_db.dart';

// Test case for private class validation

@collection
// ignore: unused_element - Test case for private class validation
class _Model {
  late int id;
}
